--- a/VPN/UI/VPN.Web/Views/Shared/_LoginPartial.cshtml
+++ b/VPN/UI/VPN.Web/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink("你好 " + User.Identity.GetUserName() + "!", "Manage", "Account", routeValues: null, htmlAttributes: new { title = "管理" })
+            @Html.ActionLink("你好 " + User.Identity.GetUserName() + "!", "MyOrders", "Account", routeValues: null, htmlAttributes: new { title = "管理" })
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">注销</a></li>
     </ul>
