--- a/VPN/UI/VPN.Web/Views/VPN/Buy.cshtml
+++ b/VPN/UI/VPN.Web/Views/VPN/Buy.cshtml
@@ -8,7 +8,6 @@
 
 <h3>你确定要购买这个VPN吗?</h3>
 <div>
-    <h4>VpnInfo</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -34,8 +33,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="购买" class="btn btn-default" /> |
+            @Html.ActionLink("返回", "Index")
         </div>
     }
 </div>
