--- a/VPN/UI/VPN.Web/Views/VPN/Details.cshtml
+++ b/VPN/UI/VPN.Web/Views/VPN/Details.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>详情</h2>
 
 <div>
-    <h4>VpnInfo</h4>
 	<hr />
     <dl class="dl-horizontal">
         <dt>
@@ -29,6 +28,5 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("返回", "Index")
 </p>
