--- a/VPN/UI/VPN.Web/Views/VPN/Index.cshtml
+++ b/VPN/UI/VPN.Web/Views/VPN/Index.cshtml
@@ -2,12 +2,10 @@
 
 @{
     ViewBag.Title = "Index";
-}
-
-<h2>Index</h2>
+} 
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("添加", "Create")
 </p>
 <table class="table">
     <tr>
@@ -29,9 +27,9 @@
             @Html.DisplayFor(modelItem => item.IpAddress)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("修改", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("详情", "Details", new { id=item.Id }) |
+            @Html.ActionLink("删除", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
